Fix bangumi player z-index

--- a/utils/gui-settings/gui-settings.css
+++ b/utils/gui-settings/gui-settings.css
@@ -582,3 +582,9 @@ li.category.folded i.icon-arrow
 {
     margin-right: 8px;
 }
+
+/* Fix bangumi player z-index */
+.player-mode-webfullscreen .player-module
+{
+    z-index: 100000 !important;
+}
